set width in api-example to 100% this prevents bad line wraps

--- a/coin-selfservice-war/src/main/webapp/public/css/api-example.css
+++ b/coin-selfservice-war/src/main/webapp/public/css/api-example.css
@@ -4,7 +4,7 @@ body {
 
 ul {
   margin: 20px;
-  width: 25%
+  width: 100%
 }
 
 li {
